--- a/client/index.html
+++ b/client/index.html
@@ -9,37 +9,36 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img src="/src/assets/dark-logo-only.png" alt="SomethingSold Logo" />
-        <span>SomethingSold</span>
-      </div>
       <nav>
-        <ul class="nav-links">
-          <li><a href="/buy">Buy</a></li>
-          <li><a href="/sell">Sell</a></li>
-          <li><a href="/profile">Profile</a></li>
+        <div class="logo">
+          <img src="src/assets/dark-logo-only.png" alt="SomethingSold Logo" />
+          <span>SomethingSold</span>
+        </div>
+        <ul>
+          <li><a href="#">Buy</a></li>
+          <li><a href="#">Sell</a></li>
+          <li><a href="#">Profile</a></li>
         </ul>
-        <a href="/login" class="btn-login">Login</a>
+        <button class="login-button">Login</button>
       </nav>
     </header>
 
     <main>
-      <section class="hero">
+      <section class="intro">
         <h1>Discover, Buy, Sell.</h1>
         <p>Your campus marketplace for secondhand furniture.</p>
-        <a href="/get-started" class="btn-main">Get Started</a>
+        <button class="get-started-button">Get Started</button>
       </section>
 
-      <section class="mission">
-        <h2>Our Mission</h2>
-        <p>
-          At SomethingSold, our goal is to make buying and selling secondhand furniture easy, accessible, and sustainable. We connect students with high-quality, affordable options right on their campus, fostering a community of responsible consumption and hassle-free transactions.
-        </p>
+      <section class="image-gallery">
+        <div id="images-container"></div>
       </section>
+
+      <footer>
+        <p>© 2024 SomethingSold. All rights reserved.</p>
+      </footer>
     </main>
 
-    <footer>
-      <p>&copy; 2024 SomethingSold. All rights reserved.</p>
-    </footer>
+    <script src="scripts.js" type="module"></script>
   </body>
 </html>
